Add target blank to open social media links

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 
 
     <div class="bottom-container">
-        <a class="footer-link" href="https://www.linkedin.com/in/jayesh-ingle-a658a8199/">LinkedIn</a>
-        <a class="footer-link" href="https://twitter.com/JayeshIngle11">Twitter</a>
-        <a class="footer-link" href="https://github.com/inglejayesh">Github</a>
+        <a class="footer-link" href="https://www.linkedin.com/in/jayesh-ingle-a658a8199/" target="_blank">LinkedIn</a>
+        <a class="footer-link" href="https://twitter.com/JayeshIngle11" target="_blank">Twitter</a>
+        <a class="footer-link" href="https://github.com/inglejayesh" target="_blank">Github</a>
         <p class="copyright">© 2020 Jayesh Ingle @ Property Comparison App.</p>
     </div>
 </body>
